# Perpustakaan-Digital

./: .gitignore  AppLogic.cpp  AppLogic.h  CMakeLists.txt  CircularImage.cpp  CircularImage.h  DATABASE_API_REFERENCE.js  Database.cpp  Database.cpp.backup  Database.h  Database_fix_temp.cpp  PROJECT_COMPLETE.txt  sigmaterial.db
.qtcreator/: CMakeLists.txt.user.17cb746
resource/: CMakeLists.txt  CircularProfilePhoto.qml  Dashboard.qml  ForgotPasswordDialog.qml  Login.qml  Main.qml  ManageStore.qml  Overview.qml  SettingsPopup.qml  SimpleCircularAvatar.qml  Stock.qml  debug_weekly_trend.qml  main.cpp  res.qrc  test_circular_photo.qml  test_qrc.qml  test_weekly_trend.qml
